# collec

./: CMakeLists.txt
src/: CMakeLists.txt  colle-c.c  collec.c
test/: CMakeLists.txt  test-runner.c  test.h  test_sum.c
